<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-light"
                android:padding="5dp"
                android:text="@string/contactcon"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="10dp"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-light"
                android:inputType="text"
                android:maxLength="20"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="10dp"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-light"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="10dp"
                android:text="@string/sub_text"
                android:textSize="16sp"
                android:textStyle="normal" />

            <com.tasmanian.properties.adapter.NoDefaultSpinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:drawablePadding="10dp"
                android:maxLength="64"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="10dp"
                android:text="@string/message_text"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/user_message"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-light"
                android:gravity="top"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/sub_letus"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_below="@+id/user_forget_txt"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:background="@drawable/template_bt_red_bg"
                android:elevation="10dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="Submit"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:textSize="16dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
